--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
       <link href="../css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;1,200;1,500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="../npm/bootstrap-icons%401.8.3/font/bootstrap-icons.css">
-      <link rel="stylesheet" href="css/style1.css">
+      <link rel="stylesheet" href="assets/style1.css">
       <script src="../ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
   </head>
   <body>
