fix: add jQuery script for counter functionality in index.html

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
           </div>
     </div>
 </section>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 <script>
-  
 $('.counter').each(function() {
     var $this = $(this),
       countTo = $this.attr('data-count');
