--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link href="../css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;1,200;1,500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="../npm/bootstrap-icons%401.8.3/font/bootstrap-icons.css">
       <link rel="stylesheet" href="assets/style1.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
       <script src="../ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
   </head>
