--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
       <link href="../npm/bootstrap%405.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
       <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
       <link href="../css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;1,200;1,500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="../npm/bootstrap-icons%401.8.3/font/bootstrap-icons.css">
@@ -14,6 +15,7 @@
       <script src="../ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
   </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../npm/bootstrap%405.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <section class="top-section">
       <div class="container top-bar">
@@ -312,7 +314,7 @@ $('.counter').each(function() {
   <div class="footer-btn">
     <a href="pricing.php.html"><button id="footer-btn-red" style="margin-right:7px; color: #e60008;" type="button" class="btn btn-light btn-lg">Start selling</button></a>
     <br>
-    <a href="https://wa.me/+919820045154" target="_blank"><button style="color: #ffffff;" type="button" class="btn btn-outline-light btn-lg">Chat with consultant</button></a>
+    <a href="https://wa.me/+919820045154" target="_blank"><button style="color: #ffffff; border-radius: 40px;" type="button" class="btn btn-outline-light btn-lg">Chat with consultant</button></a>
     <br>
   </div>
 </section>
@@ -346,7 +348,6 @@ $('.counter').each(function() {
 	  <a href="https://1mdm.com/terms-of-service"><p class="footer-link">Terms of Service</p></a>
 	  <a href="https://1mdm.com/privacy-policy"><p class="footer-link">Privacy Policy </p></a>
 	  <a href="https://1mdm.com/delivery-information"><p class="footer-link">Delivery Information</p></a>
-	  <!-- <a href="#"><p class="footer-link">Cookie Policy</p></a> -->
     </div>
     <br>
     <div class="contact-section">
